@@ -1,3 +1,10 @@
+2003-02-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* input/regression/percent-repeat-skipbars.ly: new file.
+
+	* lily/percent-repeat-engraver.cc (try_music): also insert correct
+	process moments for % repeats. Fixes problem when skipBars is set.
+
 2003-02-10  Mats Bengtsson  <mats.bengtsson@s3.kth.se>
 
 	* mf/*, buildscipts/* : Backport 1.7 changes. Fixes problems with 
